--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@types/googlemaps": "^3.30.8",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "normalize.css": "^8.0.0",
     "rxjs": "^5.5.6",
